--- a/feature/src/main/AndroidManifest.xml
+++ b/feature/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name=".FullscreenActivity"
+            android:name=".kotlinanko.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".KoActivity">
+        <activity android:name=".kotlinanko.KoActivity">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -37,6 +37,8 @@
                     android:pathPattern="/.*"
                     android:scheme="https" />
             </intent-filter>
+        </activity>
+        <activity android:name=".surfaceviewdemo.SurfaceViewDemoActivity">
         </activity>
     </application>
 
